[package]
name = "cumulus-pallet-infra-parachain-core"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Adds functionality to handle Cumulus-based chain policy which is governed by Relay-chain"

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
log = { workspace = true }

# Primitives
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
softfloat = { workspace = true }

# FRAME 
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-assets = { workspace = true }


# InfraBlockchain
polkadot-primitives = { workspace = true }
xcm = { workspace = true }

# Cumulus
cumulus-primitives-core = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-xcm = { workspace = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"softfloat/std",
	"scale-info/std",
	"log/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"polkadot-primitives/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-pallet-xcm/std",
	"xcm/std",
]
try-runtime = [
	"cumulus-pallet-parachain-system/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
