[package]
name = "pallet-system-token-oracle"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://infrablockchain.net"
repository.workspace = true
description = "Oracle pallet which mostly related to System Token"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# External
serde = { workspace = true, optional = true, features = ["derive", "alloc"] }
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
log = { workspace = true }
lite-json = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }

# primitives
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# frames
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-session = { workspace = true }
pallet-timestamp = { workspace = true }

[features]
default = ["std"]
std = [
	"lite-json/std",
	"codec/std",
	"log/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-session/std",
	"pallet-timestamp/std",
]
try-runtime = ["frame-support/try-runtime"]
