[package]
name = "pallet-system-token-conversion"
version = "0.4.0-dev"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://infrablockchain.net"
repository.workspace = true
description = "FRAME for converting System Token for transaction fee"
readme = "README.md"

[dependencies]

# External
serde = { workspace = true, features = ["alloc", "derive"] }
codec = { workspace = true, features = [
	"derive",
	"max-encoded-len",
] }
log = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }

# Base 
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

# Primitives
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-arithmetic = { workspace = true }

[features]
default = ["std"]
std = [
    "serde/std",
    "codec/std",
    "log/std",
	"scale-info/std",
    "frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-arithmetic/std",
]