[package]
name = "pallet-validator-management"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://infrablockchain.net"
repository.workspace = true
description = "FRAME for electing validator by Proof-of-Transaction"
readme = "README.md"

[dependencies]

# External
serde = { workspace = true, features = ["alloc", "derive"] }
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
log = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
softfloat = { workspace = true }

# primitives
sp-application-crypto = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-arithmetic = { workspace = true }

# frames
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-authorship = { workspace = true }
pallet-assets = { workspace = true }
pallet-session = { workspace = true }


[dev-dependencies]
sp-tracing = { workspace = true }
sp-keyring = { workspace = true }

[features]
default = ["std"]
std = [
	"serde/std",
	"scale-info/std",
	"codec/std",
	"log/std",
	"sp-application-crypto/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-authorship/std",
	"pallet-assets/std",
	"pallet-session/std",
]
