[package]
name = "pallet-system-token-tx-payment"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://infrablockchain.net"
repository.workspace = true
description = "pallet to manage transaction payments in system token"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# External
serde = { workspace = true, optional = true, features = ["derive", "alloc"] }
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
log = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }

# primitives
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-arithmetic = { workspace = true }

# frames
frame-benchmarking = { workspace = true, optional = true}
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-assets = { workspace = true }
pallet-system-token-conversion = { workspace = true }

[dev-dependencies]

pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }

[features]
default = ["std"]
std = [
	"scale-info/std",
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-arithmetic/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-transaction-payment/std",
	"pallet-assets/std",
	"pallet-system-token-conversion/std",
]
